--- a/Lesson12_13.csproj
+++ b/Lesson12_13.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="classes\School.cs" />
+    <Compile Include="classes\SchoolChild.cs" />
+    <Compile Include="classes\Subject.cs" />
+    <Compile Include="classes\Subjects.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
